--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {    // Configuration for building
 	repositories {
 		jcenter()    // Bintray's repository - a fast Maven Central mirror & more
@@ -7,7 +8,11 @@ buildscript {    // Configuration for building
 		classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.4.2' // If a newer version is available, use it
 	}
 }
-
+plugins {
+	id 'org.springframework.boot' version '2.6.4'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'java'
+}
 repositories {   // repositories for Jar's you access in your code
 	maven {
 		url 'https://oss.sonatype.org/content/repositories/snapshots' // SNAPSHOT repository (if needed)
@@ -20,8 +25,10 @@ apply plugin: 'java'                              // standard Java tasks
 apply plugin: 'war'                               // standard Web Archive plugin
 apply plugin: 'com.google.cloud.tools.appengine'  // App Engine tasks
 
+
 dependencies {
-	implementation 'com.google.appengine:appengine-api-1.0-sdk:+'  // Latest App Engine Api's
+	implementation 'com.google.appengine:appengine-api-1.0-sdk:+'
+	implementation 'org.springframework.boot:spring-boot-starter-web'// Latest App Engine Api's
 	providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
 
 	implementation 'jstl:jstl:1.2'
